--- a/src/emails/index.html
+++ b/src/emails/index.html
@@ -116,7 +116,7 @@
         </tr></table></td></tr></tbody></table></div><!--[if mso | IE]>
       </td><td style="vertical-align:top;width:300px;" class="emailHeader-outlook">
       <![endif]--><div class="mj-column-per-50 outlook-group-fix emailHeader" style="vertical-align:top;display:inline-block;direction:ltr;font-size:13px;text-align:left;width:100%;"><table role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0" style="border-spacing: 0;"><tbody><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><div class="header__desc__title txt--right" style="color: #32363f; font-weight: bold; font-size: 16px; margin-bottom: 4px; text-align: right;">
-      Alerte Soldes de compte
+      Notification de transactions
     </div>
     <div class="header__desc__subtitle txt--right" style="color: #95999d; font-size: 14px; text-align: right;">
       20 novembre 2017
@@ -142,21 +142,31 @@
       <table role="presentation" border="0" cellpadding="0" cellspacing="0">
         <tr>
           <td style="vertical-align:top;width:600px;">
-      <![endif]--><div class="mj-column-per-100 outlook-group-fix" style="vertical-align:top;display:inline-block;direction:ltr;font-size:13px;text-align:left;width:100%;"><table role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0" style="border-spacing: 0;"><tbody><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h3 style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: bold; color: #95999d; text-transform: uppercase;">Caisse d'Épargne - Survilliers-Fosses</h3></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;" align="left"><table cellpadding="0" cellspacing="0" style="border-spacing: 0; cellspacing: 0px; color: #000; font-family: Lato, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22px; table-layout: auto;" width="100%" border="0"><tr class="account">
-              <td><span>CPT Depot Part. - M Constans Simon</span></td>
-              <td width="150px" align="right"><span><span class="amount amount--neg" style="white-space: nowrap; font-size: 16px; color: #f52d2d;">
--
-500.81 €
-</span>
-</span></td>
-            </tr></table></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;"><p style="font-size:1px;margin:0px auto;border-top:1px solid #d6d8da;width:100%;"></p><!--[if mso | IE]><table role="presentation" align="center" border="0" cellpadding="0" cellspacing="0" style="font-size:1px;margin:0px auto;border-top:1px solid #d6d8da;width:100%;" width="600"><tr><td style="height:0;line-height:0;"> </td></tr></table><![endif]--></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;" align="left"><table cellpadding="0" cellspacing="0" style="border-spacing: 0; cellspacing: 0px; color: #000; font-family: Lato, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22px; table-layout: auto;" width="100%" border="0"><tr class="account">
-              <td><span>LDD Solidaire - M Constans Simon</span></td>
-              <td width="150px" align="right"><span><span class="amount amount--pos" style="white-space: nowrap; font-size: 16px; color: #35ce68;">
-+
-200.81 €
-</span>
-</span></td>
-            </tr></table></td></tr></tbody></table></div><!--[if mso | IE]>
+      <![endif]--><div class="mj-column-per-100 outlook-group-fix" style="vertical-align:top;display:inline-block;direction:ltr;font-size:13px;text-align:left;width:100%;"><table role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0" style="border-spacing: 0;"><tbody><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h3 style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: bold; color: #95999d; text-transform: uppercase;">PEE Isabelle - HSBC</h3></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h4 class="text" style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: normal; color: #95999d; text-transform: uppercase;"><span>6 July 2017</span></h4></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;" align="left"><table cellpadding="0" cellspacing="0" style="border-spacing: 0; cellspacing: 0px; color: #000; font-family: Lato, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22px; table-layout: auto;" width="100%" border="0"><tr class="transaction" style="padding: 8px 0; line-height: 1.5; border-bottom: 0;">
+                <td width="40px"><img style="width: 32px; height: 32px" src="https://files.cozycloud.cc/bank/email-assets/icons/400610.png"></td>
+                <td><span>Cabinet Osteokinesitherapie</span></td>
+                <td width="150px" align="right"><span><span class="amount amount--neg" style="white-space: nowrap; font-size: 16px; color: #f52d2d;">
+              -
+              60 €
+              </span>
+              </span></td>
+              </tr></table></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;"><p style="font-size:1px;margin:0px auto;border-top:1px solid #D0D2D5;width:100%;"></p><!--[if mso | IE]><table role="presentation" align="center" border="0" cellpadding="0" cellspacing="0" style="font-size:1px;margin:0px auto;border-top:1px solid #D0D2D5;width:100%;" width="600"><tr><td style="height:0;line-height:0;"> </td></tr></table><![endif]--></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;" align="left"><table cellpadding="0" cellspacing="0" style="border-spacing: 0; cellspacing: 0px; color: #000; font-family: Lato, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22px; table-layout: auto;" width="100%" border="0"><tr class="transaction" style="padding: 8px 0; line-height: 1.5; border-bottom: 0;">
+                <td width="40px"><img style="width: 32px; height: 32px" src="https://files.cozycloud.cc/bank/email-assets/icons/400610.png"></td>
+                <td><span>Cabinet Osteokinesitherapie</span></td>
+                <td width="150px" align="right"><span><span class="amount amount--neg" style="white-space: nowrap; font-size: 16px; color: #f52d2d;">
+              -
+              60 €
+              </span>
+              </span></td>
+              </tr></table></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h4 class="text" style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: normal; color: #95999d; text-transform: uppercase;"><span>25 August 2017</span></h4></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;" align="left"><table cellpadding="0" cellspacing="0" style="border-spacing: 0; cellspacing: 0px; color: #000; font-family: Lato, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22px; table-layout: auto;" width="100%" border="0"><tr class="transaction" style="padding: 8px 0; line-height: 1.5; border-bottom: 0;">
+                <td width="40px"><img style="width: 32px; height: 32px" src="https://files.cozycloud.cc/bank/email-assets/icons/400610.png"></td>
+                <td><span>Virement Compl Sante</span></td>
+                <td width="150px" align="right"><span><span class="amount amount--pos" style="white-space: nowrap; font-size: 16px; color: #35ce68;">
+              +
+              7.5 €
+              </span>
+              </span></td>
+              </tr></table></td></tr></tbody></table></div><!--[if mso | IE]>
       </td></tr></table>
       <![endif]--></td></tr></tbody></table></div><!--[if mso | IE]>
         </td>
@@ -167,14 +177,53 @@
       <table role="presentation" border="0" cellpadding="0" cellspacing="0">
         <tr>
           <td style="vertical-align:top;width:600px;">
-      <![endif]--><div class="mj-column-per-100 outlook-group-fix" style="vertical-align:top;display:inline-block;direction:ltr;font-size:13px;text-align:left;width:100%;"><table role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0" style="border-spacing: 0;"><tbody><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h3 style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: bold; color: #95999d; text-transform: uppercase;">Banque Populaire Rives de Paris</h3></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;" align="left"><table cellpadding="0" cellspacing="0" style="border-spacing: 0; cellspacing: 0px; color: #000; font-family: Lato, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22px; table-layout: auto;" width="100%" border="0"><tr class="account">
-              <td><span>Compte de Dépôts</span></td>
-              <td width="150px" align="right"><span><span class="amount amount--pos" style="white-space: nowrap; font-size: 16px; color: #35ce68;">
-+
-110.76 €
-</span>
-</span></td>
-            </tr></table></td></tr></tbody></table></div><!--[if mso | IE]>
+      <![endif]--><div class="mj-column-per-100 outlook-group-fix" style="vertical-align:top;display:inline-block;direction:ltr;font-size:13px;text-align:left;width:100%;"><table role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0" style="border-spacing: 0;"><tbody><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h3 style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: bold; color: #95999d; text-transform: uppercase;">Compte courant Claude - BNPP</h3></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h4 class="text" style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: normal; color: #95999d; text-transform: uppercase;"><span>11 July 2017</span></h4></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;" align="left"><table cellpadding="0" cellspacing="0" style="border-spacing: 0; cellspacing: 0px; color: #000; font-family: Lato, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22px; table-layout: auto;" width="100%" border="0"><tr class="transaction" style="padding: 8px 0; line-height: 1.5; border-bottom: 0;">
+                <td width="40px"><img style="width: 32px; height: 32px" src="https://files.cozycloud.cc/bank/email-assets/icons/400610.png"></td>
+                <td><span>Cpam Paris</span></td>
+                <td width="150px" align="right"><span><span class="amount amount--pos" style="white-space: nowrap; font-size: 16px; color: #35ce68;">
+              +
+              28.7 €
+              </span>
+              </span></td>
+              </tr></table></td></tr></tbody></table></div><!--[if mso | IE]>
+      </td></tr></table>
+      <![endif]--></td></tr></tbody></table></div><!--[if mso | IE]>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:600px;" class="account-outlook">
+      <![endif]--><div style="margin:0px auto;max-width:600px;" class="account"><table role="presentation" cellpadding="0" cellspacing="0" style="border-spacing: 0; font-size: 0px; width: 100%;" align="center" border="0" width="100%"><tbody><tr><td style="text-align:center;vertical-align:top;direction:ltr;font-size:0px;padding:20px 0px;padding-bottom:10px;padding-top:0px;"><!--[if mso | IE]>
+      <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td style="vertical-align:top;width:600px;">
+      <![endif]--><div class="mj-column-per-100 outlook-group-fix" style="vertical-align:top;display:inline-block;direction:ltr;font-size:13px;text-align:left;width:100%;"><table role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0" style="border-spacing: 0;"><tbody><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h3 style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: bold; color: #95999d; text-transform: uppercase;">Livret A Isabelle - La Banque Postale</h3></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h4 class="text" style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: normal; color: #95999d; text-transform: uppercase;"><span>3 July 2017</span></h4></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;" align="left"><table cellpadding="0" cellspacing="0" style="border-spacing: 0; cellspacing: 0px; color: #000; font-family: Lato, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22px; table-layout: auto;" width="100%" border="0"><tr class="transaction" style="padding: 8px 0; line-height: 1.5; border-bottom: 0;">
+                <td width="40px"><img style="width: 32px; height: 32px" src="https://files.cozycloud.cc/bank/email-assets/icons/600110.png"></td>
+                <td><span>Transfert Livret A</span></td>
+                <td width="150px" align="right"><span><span class="amount amount--pos" style="white-space: nowrap; font-size: 16px; color: #35ce68;">
+              +
+              400 €
+              </span>
+              </span></td>
+              </tr></table></td></tr></tbody></table></div><!--[if mso | IE]>
+      </td></tr></table>
+      <![endif]--></td></tr></tbody></table></div><!--[if mso | IE]>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:600px;" class="account-outlook">
+      <![endif]--><div style="margin:0px auto;max-width:600px;" class="account"><table role="presentation" cellpadding="0" cellspacing="0" style="border-spacing: 0; font-size: 0px; width: 100%;" align="center" border="0" width="100%"><tbody><tr><td style="text-align:center;vertical-align:top;direction:ltr;font-size:0px;padding:20px 0px;padding-bottom:10px;padding-top:0px;"><!--[if mso | IE]>
+      <table role="presentation" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td style="vertical-align:top;width:600px;">
+      <![endif]--><div class="mj-column-per-100 outlook-group-fix" style="vertical-align:top;display:inline-block;direction:ltr;font-size:13px;text-align:left;width:100%;"><table role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0" style="border-spacing: 0;"><tbody><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h3 style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: bold; color: #95999d; text-transform: uppercase;">Compte jeune Louise - BNPP</h3></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;padding-top:0px;padding-bottom:0px;" align="left"><div style="cursor:auto;color:#000000;font-family:Lato, Helvetica, Arial, sans-serif;font-size:13px;line-height:22px;text-align:left;"><h4 class="text" style="display: block; margin: 0; padding: 0; font-size: 12px; font-weight: normal; color: #95999d; text-transform: uppercase;"><span>4 July 2017</span></h4></div></td></tr><tr><td style="word-wrap:break-word;font-size:0px;padding:10px 25px;" align="left"><table cellpadding="0" cellspacing="0" style="border-spacing: 0; cellspacing: 0px; color: #000; font-family: Lato, Helvetica, Arial, sans-serif; font-size: 13px; line-height: 22px; table-layout: auto;" width="100%" border="0"><tr class="transaction" style="padding: 8px 0; line-height: 1.5; border-bottom: 0;">
+                <td width="40px"><img style="width: 32px; height: 32px" src="https://files.cozycloud.cc/bank/email-assets/icons/400110.png"></td>
+                <td><span>Auchan</span></td>
+                <td width="150px" align="right"><span><span class="amount amount--neg" style="white-space: nowrap; font-size: 16px; color: #f52d2d;">
+              -
+              42.3 €
+              </span>
+              </span></td>
+              </tr></table></td></tr></tbody></table></div><!--[if mso | IE]>
       </td></tr></table>
       <![endif]--></td></tr></tbody></table></div><!--[if mso | IE]>
           </td>
